# backend-test

./: .dockerignore  .gitignore  Dockerfile.core  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: __init__.py  auth.py  users.py
app/models/: __init__.py  user.py
app/routers/: __init__.py  login.py  score.py  signup.py
app/settings/: __init__.py  model.py
app/templates/components/: cards.html  navbar.html  table.html
app/templates/general_pages/: homepage.html
app/templates/users/: register.html
app/utils/: converters.py  logging.py
app/views/: __init__.py
